[package]
name = "solbalance"
version = "0.1.0"
description = "Delta-Neutral Yield Harvester built on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solbalance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
